# Sonarcloud-CppFalsePositives

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.github/workflows/: build.yml
deploy/: mark_false_positives.sh  mark_false_positives_all.sh
example-code/: example1.c  example1.h  exampleTests.cpp  exampleTests.hpp  main.cpp  productionCode.c  unnamedparameter.cpp  unnamedparameter.hpp
